--- a/index.html
+++ b/index.html
@@ -1,137 +1,54 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Corban's Website</title>
+        <title>Home</title>
         <link href = "default.css" rel = "stylesheet" type = "text/css">
+        <link href = "index.css" rel = "stylesheet" type = "text/css">
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     </head>
     <body>
         <div id = "navBar">
-            <img id = "logo" src = "Logo_Mak.jpg"/>
-            <a href = "#it">It</a>
+            <img id = "logo" src = "./Images/Logo_Mak.jpg"/>
+            <a href = "index.html">About Me</a>
+            <a href = "disclaimer.html">Stupid Stuff</a>
         </div>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p id = "it">It</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
-        <p>Not it</p>
+        <img src = "./Images/Me.JPG" />
+        <h1>All About Me</h1>
+        <div id = "hobbies">
+            <h3>Hobbies</h3>
+            <ul>
+                <li>Coding</li>
+                <li>Singing</li>
+                <li>Netflix? (Is that a hobby?)</li>
+                <li>Gymnastics</li>
+                <li>Being stupid</li>
+                <li>Reading</li>
+            </ul>
+        </div>
+        <div id = "skills">
+            <h3>Skills</h3>
+            <ul>
+                <li>Able to do nothing for long periods of time</li>
+                <li>Graphic Design
+                    <ul>
+                        <li>Adobe Illustrator</li>
+                        <li>Adobe Photoshop</li>
+                        <li>Adobe InDesign</li>
+                    </ul>
+                </li>
+                <li>Getting useless and useful stuff done at the same time</li>
+                <li>Having ridiculous amounts of time to do stupid stuff</li>
+            </ul>
+        </div>
+        <div id = "interests">
+            <h3>Interests</h3>
+            <ul>
+                <li>Superhero movies</li>
+                <li>Netflix</li>
+                <li>Wasting time</li>
+                <li>Sci-Fi/Dystopian Books</li>
+            </ul>
+        </div>
+        <div id = "button"><a href = "disclaimer.html">Stupid Stuff &gt;</a></div>
     </body>
 </html>
