--- a/HTML/disclaimer.html
+++ b/HTML/disclaimer.html
@@ -2,12 +2,12 @@
 <html>
     <head>
         <title>Disclaimer</title>
-        <link href = "default.css" rel = "stylesheet" type = "text/css">
+        <link href = "../CSS/default.css" rel = "stylesheet" type = "text/css">
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     </head>
     <body>
         <div id = "navBar">
-            <img id = "logo" src = "./Images/Logo_Mak.jpg"/>
+            <img id = "logo" src = "../Images/Logo_Mak.jpg"/>
             <a href = "index.html">About Me</a>
             <a href = "disclaimer.html">Stupid Stuff</a>
         </div>
@@ -74,6 +74,6 @@
             <li>Because 3549813/11684.168731684321654 is 303.813911072.</li>
             <li>Because there's no fun on the other side of the button unless you find what I find fun fun.</li>
         </ol>
-        <div id = "button"><a href = "stupidStuff.html">Click if you dare...</a></div>
+        <a href = "stupidStuff.html" class = "button">Click if you dare...</a>
     </body>
 </html>
