--- a/HTML/index.html
+++ b/HTML/index.html
@@ -2,18 +2,18 @@
 <html>
     <head>
         <title>Home</title>
-        <link href = "default.css" rel = "stylesheet" type = "text/css">
-        <link href = "index.css" rel = "stylesheet" type = "text/css">
+        <link href = "../CSS/default.css" rel = "stylesheet" type = "text/css">
+        <link href = "../CSS/index.css" rel = "stylesheet" type = "text/css">
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     </head>
     <body>
         <div id = "navBar">
-            <img id = "logo" src = "./Images/Logo_Mak.jpg"/>
+            <img id = "logo" src = "../Images/Logo_Mak.jpg"/>
             <a href = "index.html">About Me</a>
             <a href = "disclaimer.html">Stupid Stuff</a>
         </div>
-        <img src = "./Images/Me.JPG" />
         <h1>All About Me</h1>
+        <img src = "../Images/Me.JPG" id = "mePic" />
         <div id = "hobbies">
             <h3>Hobbies</h3>
             <ul>
@@ -49,6 +49,6 @@
                 <li>Sci-Fi/Dystopian Books</li>
             </ul>
         </div>
-        <div id = "button"><a href = "disclaimer.html">Stupid Stuff &gt;</a></div>
+        <a href = "disclaimer.html" class = "button">Stupid Stuff <strong>&#x226B;</strong></a>
     </body>
 </html>
