--- a/HTML/default.html
+++ b/HTML/default.html
@@ -2,12 +2,12 @@
 <html>
     <head>
         <title></title>
-        <link href = "default.css" rel = "stylesheet" type = "text/css">
+        <link href = "../CSS/default.css" rel = "stylesheet" type = "text/css">
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     </head>
     <body>
         <div id = "navBar">
-            <img id = "logo" src = "./Images/Logo_Mak.jpg"/>
+            <img id = "logo" src = "../Images/Logo_Mak.jpg"/>
             <a href = "index.html">About Me</a>
             <a href = "disclaimer.html">Stupid Stuff</a>
         </div>
