--- a/HTML/index.html
+++ b/HTML/index.html
@@ -9,8 +9,8 @@
     <body>
         <div id = "navBar">
             <img id = "logo" src = "../Images/Logo_Mak.jpg"/>
-            <a href = "index.html">About Me</a>
-            <a href = "disclaimer.html">Stupid Stuff</a>
+            <div><a href = "index.html">About Me</a></div>
+            <div><a href = "disclaimer.html">Stupid Stuff</a></div>
         </div>
         <h1>All About Me</h1>
         <img src = "../Images/Me.JPG" id = "mePic" />
