--- a/HTML/stupidStuff.html
+++ b/HTML/stupidStuff.html
@@ -9,40 +9,42 @@
     <body>
         <div id = "navBar">
             <img id = "logo" src = "../Images/Logo_Mak.jpg"/>
-            <a href = "index.html">About Me</a>
-            <a href = "disclaimer.html">Stupid Stuff</a>
+            <div><a href = "index.html">About Me</a></div>
+            <div><a href = "disclaimer.html">Stupid Stuff</a></div>
         </div>
-        <div class = "images">
-            <a href = "https://www.youtube.com" target = "_blank"><img src = "../Images/Rainbow_Pineapple.jpg" /></a>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mollis dolor a metus cursus, eu laoreet lacus sollicitudin. Integer dapibus gravida metus, vel pulvinar lacus.</p>
-        </div>
-        <div class = "images">
-            <img src = "../Images/Jason actually smiling for once.jpg" />
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mollis dolor a metus cursus, eu laoreet lacus sollicitudin. Integer dapibus gravida metus, vel pulvinar lacus.</p>
-        </div>
-        <div class = "images">
-            <img src = "../Images/At Least They're Alternating.jpg" />
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mollis dolor a metus cursus, eu laoreet lacus sollicitudin. Integer dapibus gravida metus, vel pulvinar lacus.</p>
-        </div>
-        <div class = "images">
-            <img src = "../Images/Dallin Bird Poop.jpg" />
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mollis dolor a metus cursus, eu laoreet lacus sollicitudin. Integer dapibus gravida metus, vel pulvinar lacus.</p>
-        </div>
-        <div class = "images">
-            <img src = "../Images/Potato_Corban_Mak_Moon.jpg" />
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mollis dolor a metus cursus, eu laoreet lacus sollicitudin. Integer dapibus gravida metus, vel pulvinar lacus.</p>
-        </div>
-        <div class = "images">
-            <img src = "../Images/When Your Teacher Tells You To Draw A Picture of Julius Ceasar.jpg" />
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mollis dolor a metus cursus, eu laoreet lacus sollicitudin. Integer dapibus gravida metus, vel pulvinar lacus.</p>
-        </div>
-        <div class = "images">
-            <img src = "../Images/Zak's Amazing Greatness.jpg" />
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mollis dolor a metus cursus, eu laoreet lacus sollicitudin. Integer dapibus gravida metus, vel pulvinar lacus.</p>
-        </div>
-        <div class = "images">
-            <img src = "../Images/CTE Doesn't Deserve a 100%.JPG" />
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mollis dolor a metus cursus, eu laoreet lacus sollicitudin. Integer dapibus gravida metus, vel pulvinar lacus.</p>
+        <div id = "images">
+            <div class = "images">
+                <a href = "https://www.youtube.com" target = "_blank"><img src = "../Images/Rainbow_Pineapple.jpg" /></a>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mollis dolor a metus cursus, eu laoreet lacus sollicitudin. Integer dapibus gravida metus, vel pulvinar lacus.</p>
+            </div>
+            <div class = "images">
+                <img src = "../Images/Jason actually smiling for once.jpg" />
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mollis dolor a metus cursus, eu laoreet lacus sollicitudin. Integer dapibus gravida metus, vel pulvinar lacus.</p>
+            </div>
+            <div class = "images">
+                <img src = "../Images/Zak's Amazing Greatness.jpg" />
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mollis dolor a metus cursus, eu laoreet lacus sollicitudin. Integer dapibus gravida metus, vel pulvinar lacus.</p>
+            </div>  
+            <div class = "images">
+                <img src = "../Images/Potato_Corban_Mak_Moon.jpg" />
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mollis dolor a metus cursus, eu laoreet lacus sollicitudin. Integer dapibus gravida metus, vel pulvinar lacus.</p>
+            </div>
+            <div class = "images">
+                <img src = "../Images/Dallin Bird Poop.jpg" />
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mollis dolor a metus cursus, eu laoreet lacus sollicitudin. Integer dapibus gravida metus, vel pulvinar lacus.</p>
+            </div>
+            <div class = "images">
+                <img src = "../Images/When Your Teacher Tells You To Draw A Picture of Julius Ceasar.jpg" />
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mollis dolor a metus cursus, eu laoreet lacus sollicitudin. Integer dapibus gravida metus, vel pulvinar lacus.</p>
+            </div>
+            <div class = "images">
+                <img src = "../Images/CTE Doesn't Deserve a 100%.JPG" />
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mollis dolor a metus cursus, eu laoreet lacus sollicitudin. Integer dapibus gravida metus, vel pulvinar lacus.</p>
+            </div>
+            <div class = "images">
+                <img src = "../Images/At Least They're Alternating.jpg" />
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mollis dolor a metus cursus, eu laoreet lacus sollicitudin. Integer dapibus gravida metus, vel pulvinar lacus.</p>
+            </div>
         </div>
         <a href = "index.html" class = "button"><strong>&#x226A;</strong>About Me</a>
     </body>
