--- a/HTML/default.html
+++ b/HTML/default.html
@@ -8,8 +8,8 @@
     <body>
         <div id = "navBar">
             <img id = "logo" src = "../Images/Logo_Mak.jpg"/>
-            <a href = "index.html">About Me</a>
-            <a href = "disclaimer.html">Stupid Stuff</a>
+            <div><a href = "index.html">About Me</a></div>
+            <div><a href = "disclaimer.html">Stupid Stuff</a></div>
         </div>
     </body>
 </html>
