--- a/HTML/index.html
+++ b/HTML/index.html
@@ -7,6 +7,7 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     </head>
     <body>
+        <h1 id = "top">Corban Mak</h1>
         <div id = "navBar">
             <img id = "logo" src = "../Images/Logo_Mak.jpg"/>
             <div><a href = "index.html">About Me</a></div>
