--- a/HTML/index.html
+++ b/HTML/index.html
@@ -9,7 +9,7 @@
     <body>
         <h1 id = "top">Corban Mak</h1>
         <div id = "navBar">
-            <img id = "logo" src = "../Images/Logo_Mak.jpg"/>
+            <a href = "index.html"><img id = "logo" src = "../Images/Logo_Mak.jpg"/></a>
             <div><a href = "index.html">About Me</a></div>
             <div><a href = "disclaimer.html">Stupid Stuff</a></div>
         </div>
@@ -50,6 +50,8 @@
                 <li>Sci-Fi/Dystopian Books</li>
             </ul>
         </div>
-        <a href = "disclaimer.html" class = "button">Stupid Stuff <strong>&#x226B;</strong></a>
+        <div id = "buttons">
+            <a href = "disclaimer.html" class = "button flushRight">Stupid Stuff <strong>&#x226B;</strong></a>
+        </div>
     </body>
 </html>
