--- a/HTML/stupidStuff.html
+++ b/HTML/stupidStuff.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <div id = "navBar">
-            <img id = "logo" src = "../Images/Logo_Mak.jpg"/>
+            <a href = "index.html"><img id = "logo" src = "../Images/Logo_Mak.jpg"/></a>
             <div><a href = "index.html">About Me</a></div>
             <div><a href = "disclaimer.html">Stupid Stuff</a></div>
         </div>
@@ -46,6 +46,8 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mollis dolor a metus cursus, eu laoreet lacus sollicitudin. Integer dapibus gravida metus, vel pulvinar lacus.</p>
             </div>
         </div>
-        <a href = "index.html" class = "button"><strong>&#x226A;</strong>About Me</a>
+        <div id = "buttons">
+            <a href = "index.html" class = "button flushLeft"><strong>&#x226A;</strong>About Me</a>
+        </div>
     </body>
 </html>
