--- a/HTML/default.html
+++ b/HTML/default.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div id = "navBar">
-            <img id = "logo" src = "../Images/Logo_Mak.jpg"/>
+            <a href = "index.html"><img id = "logo" src = "../Images/Logo_Mak.jpg"/></a>
             <div><a href = "index.html">About Me</a></div>
             <div><a href = "disclaimer.html">Stupid Stuff</a></div>
         </div>
