--- a/HTML/disclaimer.html
+++ b/HTML/disclaimer.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <div id = "navBar">
-            <img id = "logo" src = "../Images/Logo_Mak.jpg"/>
+            <a href = "index.html"><img id = "logo" src = "../Images/Logo_Mak.jpg"/></a>
             <div><a href = "index.html">About Me</a></div>
             <div><a href = "disclaimer.html">Stupid Stuff</a></div>
         </div>
@@ -74,6 +74,9 @@
             <li>Because 3549813/11684.168731684321654 is 303.813911072.</li>
             <li>Because there's no fun on the other side of the button unless you find what I find fun fun.</li>
         </ol>
-        <a href = "stupidStuff.html" class = "button">Click if you dare...</a>
+        <div id = "buttons">
+            <a href = "index.html" class = "button flushLeft"><strong>&#x226A;</strong>About Me</a>
+            <a href = "stupidStuff.html" class = "button flushRight">Stupid Stuff <strong>&#x226B;</strong></a>
+        </div>
     </body>
 </html>
