--- a/HTML/default.html
+++ b/HTML/default.html
@@ -11,5 +11,10 @@
             <div><a href = "index.html">About Me</a></div>
             <div><a href = "disclaimer.html">Stupid Stuff</a></div>
         </div>
+        
+        <div id = "buttons">
+            <a href = ""></a>
+            <a href = ""></a>
+        </div>
     </body>
 </html>
