--- a/HTML/index.html
+++ b/HTML/index.html
@@ -51,6 +51,7 @@
             </ul>
         </div>
         <div id = "buttons">
+            <a href = ""></a>
             <a href = "disclaimer.html" class = "button flushRight">Stupid Stuff <strong>&#x226B;</strong></a>
         </div>
     </body>
