--- a/HTML/stupidStuff.html
+++ b/HTML/stupidStuff.html
@@ -14,7 +14,7 @@
         </div>
         <div id = "images">
             <div class = "images">
-                <a href = "https://www.youtube.com" target = "_blank"><img src = "../Images/Rainbow_Pineapple.jpg" /></a>
+                <a href = "https://www.youtube.com/watch?v=7QX7sB1zOn4" target = "_blank"><img src = "../Images/Rainbow_Pineapple.jpg" /></a>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mollis dolor a metus cursus, eu laoreet lacus sollicitudin. Integer dapibus gravida metus, vel pulvinar lacus.</p>
             </div>
             <div class = "images">
@@ -22,13 +22,13 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mollis dolor a metus cursus, eu laoreet lacus sollicitudin. Integer dapibus gravida metus, vel pulvinar lacus.</p>
             </div>
             <div class = "images">
-                <img src = "../Images/Zak's Amazing Greatness.jpg" />
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mollis dolor a metus cursus, eu laoreet lacus sollicitudin. Integer dapibus gravida metus, vel pulvinar lacus.</p>
-            </div>  
-            <div class = "images">
                 <img src = "../Images/Potato_Corban_Mak_Moon.jpg" />
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mollis dolor a metus cursus, eu laoreet lacus sollicitudin. Integer dapibus gravida metus, vel pulvinar lacus.</p>
             </div>
+            <div class = "images">
+                <img src = "../Images/Zak's Amazing Greatness.jpg" />
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mollis dolor a metus cursus, eu laoreet lacus sollicitudin. Integer dapibus gravida metus, vel pulvinar lacus.</p>
+            </div>  
             <div class = "images">
                 <img src = "../Images/Dallin Bird Poop.jpg" />
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mollis dolor a metus cursus, eu laoreet lacus sollicitudin. Integer dapibus gravida metus, vel pulvinar lacus.</p>
@@ -38,16 +38,13 @@
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mollis dolor a metus cursus, eu laoreet lacus sollicitudin. Integer dapibus gravida metus, vel pulvinar lacus.</p>
             </div>
             <div class = "images">
-                <img src = "../Images/CTE Doesn't Deserve a 100%.JPG" />
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mollis dolor a metus cursus, eu laoreet lacus sollicitudin. Integer dapibus gravida metus, vel pulvinar lacus.</p>
-            </div>
-            <div class = "images">
                 <img src = "../Images/At Least They're Alternating.jpg" />
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mollis dolor a metus cursus, eu laoreet lacus sollicitudin. Integer dapibus gravida metus, vel pulvinar lacus.</p>
             </div>
         </div>
         <div id = "buttons">
             <a href = "index.html" class = "button flushLeft"><strong>&#x226A;</strong>About Me</a>
+            <a href = ""></a>
         </div>
     </body>
 </html>
