--- a/HTML/stupidStuff.html
+++ b/HTML/stupidStuff.html
@@ -14,32 +14,32 @@
         </div>
         <div id = "images">
             <div class = "images">
+                <p>An origami rainbow pineapple I made for friends for their stop motion animation, The Pineapple Problem. Click to watch The Pineapple Problem.</p>
                 <a href = "https://www.youtube.com/watch?v=7QX7sB1zOn4" target = "_blank"><img src = "../Images/Rainbow_Pineapple.jpg" /></a>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mollis dolor a metus cursus, eu laoreet lacus sollicitudin. Integer dapibus gravida metus, vel pulvinar lacus.</p>
             </div>
             <div class = "images">
+                <p>Jason, the shy kid who never says anything or smiles actually smiles for once.</p>
                 <img src = "../Images/Jason actually smiling for once.jpg" />
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mollis dolor a metus cursus, eu laoreet lacus sollicitudin. Integer dapibus gravida metus, vel pulvinar lacus.</p>
             </div>
             <div class = "images">
+                <p>The moon replaced with Davis, Bob Ross, a potato, and happy little trees. No further explanation needed.</p>
                 <img src = "../Images/Potato_Corban_Mak_Moon.jpg" />
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mollis dolor a metus cursus, eu laoreet lacus sollicitudin. Integer dapibus gravida metus, vel pulvinar lacus.</p>
             </div>
             <div class = "images">
+                <p>A conversation between my best friend and I.</p>
                 <img src = "../Images/Zak's Amazing Greatness.jpg" />
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mollis dolor a metus cursus, eu laoreet lacus sollicitudin. Integer dapibus gravida metus, vel pulvinar lacus.</p>
             </div>  
             <div class = "images">
+                <p>Double exposure of my friend and bird poop. I mean a mountain.</p>
                 <img src = "../Images/Dallin Bird Poop.jpg" />
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mollis dolor a metus cursus, eu laoreet lacus sollicitudin. Integer dapibus gravida metus, vel pulvinar lacus.</p>
             </div>
             <div class = "images">
+                <p>I teacher told me to draw a picture of Julias Ceasar. So I did.</p>
                 <img src = "../Images/When Your Teacher Tells You To Draw A Picture of Julius Ceasar.jpg" />
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mollis dolor a metus cursus, eu laoreet lacus sollicitudin. Integer dapibus gravida metus, vel pulvinar lacus.</p>
             </div>
             <div class = "images">
+                <p>I end my first game of Magic with -25 health. I then say, "At least they're alternating."</p>
                 <img src = "../Images/At Least They're Alternating.jpg" />
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec mollis dolor a metus cursus, eu laoreet lacus sollicitudin. Integer dapibus gravida metus, vel pulvinar lacus.</p>
             </div>
         </div>
         <div id = "buttons">
