--- a/HTML/default.html
+++ b/HTML/default.html
@@ -4,12 +4,22 @@
         <title></title>
         <link href = "../CSS/default.css" rel = "stylesheet" type = "text/css">
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+        <script src = "../JavaScript/default.js"></script>
     </head>
     <body>
         <div id = "navBar">
             <a href = "index.html"><img id = "logo" src = "../Images/Logo_Mak.jpg"/></a>
             <div><a href = "index.html">About Me</a></div>
             <div><a href = "disclaimer.html">Stupid Stuff</a></div>
+            <div class = "dropdown">
+                <a>Yay</a>
+                <div>
+                    <a>Yay 1</a>
+                    <a>Yay 2</a>
+                    <a>Yay 3</a>
+                    <a>Yay 4</a>
+                </div>
+            </div>
         </div>
         
         <div id = "buttons">
