--- a/HTML/default.html
+++ b/HTML/default.html
@@ -11,7 +11,7 @@
             <a href = "index.html"><img id = "logo" src = "../Images/Logo_Mak.jpg"/></a>
             <div><a href = "index.html">About Me</a></div>
             <div><a href = "disclaimer.html">Stupid Stuff</a></div>
-            <div class = "dropdown">
+            <div id = "dropdown1">
                 <a>Yay</a>
                 <div>
                     <a>Yay 1</a>
