--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html>
     <head>
         <title>Home</title>
-        <link href = "../CSS/default.css" rel = "stylesheet" type = "text/css">
-        <link href = "../CSS/index.css" rel = "stylesheet" type = "text/css">
+        <link href = "./CSS/default.css" rel = "stylesheet" type = "text/css">
+        <link href = "./CSS/index.css" rel = "stylesheet" type = "text/css">
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     </head>
     <body>
         <h1 id = "top">Corban Mak</h1>
         <div id = "navBar">
-            <a href = "index.html"><img id = "logo" src = "../Images/Logo_Mak.jpg"/></a>
-            <div><a href = "index.html">About Me</a></div>
-            <div><a href = "disclaimer.html">Stupid Stuff</a></div>
+            <a href = "./HTML/index.html"><img id = "logo" src = "./Images/Logo_Mak.jpg"/></a>
+            <div><a href = "./HTML/index.html">About Me</a></div>
+            <div><a href = "./HTML/disclaimer.html">Stupid Stuff</a></div>
         </div>
         <h1>All About Me</h1>
-        <img src = "../Images/Me.JPG" id = "mePic" />
+        <img src = "./Images/Me.JPG" id = "mePic" />
         <div id = "hobbies">
             <h3>Hobbies</h3>
             <ul>
@@ -52,7 +52,7 @@
         </div>
         <div id = "buttons">
             <a href = ""></a>
-            <a href = "disclaimer.html" class = "button flushRight">Stupid Stuff <strong>&#x226B;</strong></a>
+            <a href = "./HTML/disclaimer.html" class = "button flushRight">Stupid Stuff <strong>&#x226B;</strong></a>
         </div>
     </body>
 </html>
