--- a/HTML/stupidStuff.html
+++ b/HTML/stupidStuff.html
@@ -8,8 +8,8 @@
     </head>
     <body>
         <div id = "navBar">
-            <a href = "index.html"><img id = "logo" src = "../Images/Logo_Mak.jpg"/></a>
-            <div><a href = "index.html">About Me</a></div>
+            <a href = "./index.html"><img id = "logo" src = "../Images/Logo_Mak.jpg"/></a>
+            <div><a href = "./index.html">About Me</a></div>
             <div><a href = "disclaimer.html">Stupid Stuff</a></div>
         </div>
         <div id = "images">
