Fix index.html button

--- a/HTML/disclaimer.html
+++ b/HTML/disclaimer.html
@@ -7,8 +7,8 @@
     </head>
     <body>
         <div id = "navBar">
-            <a href = "./index.html"><img id = "logo" src = "../Images/Logo_Mak.jpg"/></a>
-            <div><a href = "./index.html">About Me</a></div>
+            <a href = "../index.html"><img id = "logo" src = "../Images/Logo_Mak.jpg"/></a>
+            <div><a href = "../index.html">About Me</a></div>
             <div><a href = "disclaimer.html">Stupid Stuff</a></div>
         </div>
         <h1>Disclaimer!</h1>
@@ -75,7 +75,7 @@
             <li>Because there's no fun on the other side of the button unless you find what I find fun fun.</li>
         </ol>
         <div id = "buttons">
-            <a href = "index.html" class = "button flushLeft"><strong>&#x226A;</strong>About Me</a>
+            <a href = "../index.html" class = "button flushLeft"><strong>&#x226A;</strong>About Me</a>
             <a href = "stupidStuff.html" class = "button flushRight">Stupid Stuff <strong>&#x226B;</strong></a>
         </div>
     </body>
