--- a/HTML/stupidStuff.html
+++ b/HTML/stupidStuff.html
@@ -8,8 +8,8 @@
     </head>
     <body>
         <div id = "navBar">
-            <a href = "./index.html"><img id = "logo" src = "../Images/Logo_Mak.jpg"/></a>
-            <div><a href = "./index.html">About Me</a></div>
+            <a href = "../index.html"><img id = "logo" src = "../Images/Logo_Mak.jpg"/></a>
+            <div><a href = "../index.html">About Me</a></div>
             <div><a href = "disclaimer.html">Stupid Stuff</a></div>
         </div>
         <div id = "images">
@@ -43,7 +43,7 @@
             </div>
         </div>
         <div id = "buttons">
-            <a href = "./index.html" class = "button flushLeft"><strong>&#x226A;</strong>About Me</a>
+            <a href = "../index.html" class = "button flushLeft"><strong>&#x226A;</strong>About Me</a>
             <a href = ""></a>
         </div>
     </body>
