--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <h1 id = "top">Corban Mak</h1>
         <div id = "navBar">
             <a href = "./HTML/index.html"><img id = "logo" src = "./Images/Logo_Mak.jpg"/></a>
-            <div><a href = "./HTML/index.html">About Me</a></div>
+            <div><a href = "./index.html">About Me</a></div>
             <div><a href = "./HTML/disclaimer.html">Stupid Stuff</a></div>
         </div>
         <h1>All About Me</h1>
