--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div id = "navBar">
             <a href = "./HTML/index.html"><img id = "logo" src = "./Images/Logo_Mak.jpg"/></a>
             <div><a href = "./index.html">About Me</a></div>
-            <div><a href = "./HTML/disclaimer.html">Stupid Stuff</a></div>
+            <div><a href = "./HTML/stupidStuff.html">Memories</a></div>
         </div>
         <h1>All About Me</h1>
         <img src = "./Images/Me.JPG" id = "mePic" />
@@ -52,7 +52,7 @@
         </div>
         <div id = "buttons">
             <a href = ""></a>
-            <a href = "./HTML/disclaimer.html" class = "button flushRight">Stupid Stuff <strong>&#x226B;</strong></a>
+            <a href = "./HTML/stupidStuff.html" class = "button flushRight">Memories <strong>&#x226B;</strong></a>
         </div>
     </body>
 </html>
