--- a/HTML/stupidStuff.html
+++ b/HTML/stupidStuff.html
@@ -10,7 +10,7 @@
         <div id = "navBar">
             <a href = "../index.html"><img id = "logo" src = "../Images/Logo_Mak.jpg"/></a>
             <div><a href = "../index.html">About Me</a></div>
-            <div><a href = "disclaimer.html">Stupid Stuff</a></div>
+            <div><a href = "stupidStuff.html">Memories</a></div>
         </div>
         <div id = "images">
             <div class = "images">
