--- a/HTML/stupidStuff.html
+++ b/HTML/stupidStuff.html
@@ -15,7 +15,7 @@
         <div id = "images">
             <div class = "images">
                 <p>An origami rainbow pineapple I made for friends for their stop motion animation, The Pineapple Problem. Click to watch The Pineapple Problem.</p>
-                <a href = "https://www.youtube.com/watch?v=7QX7sB1zOn4" target = "_blank"><img src = "../Images/Rainbow_Pineapple.jpg" /></a>
+                <a href = "https://www.youtube.com/watch?v=7QX7sB1zOn4" target = "_blank"><img src = "../Images/Rainbow_Pineapple.JPG" /></a>
             </div>
             <div class = "images">
                 <p>Jason, the shy kid who never says anything or smiles actually smiles for once.</p>
