--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
         <div id = "buttons">
             <a href = ""></a>
-            <a href = "./HTML/disclaimer.html" class = "button flushRight">Memories <strong>&#x226B;</strong></a>
+            <a href = "./HTML/stupidStuff.html" class = "button flushRight">Memories <strong>&#x226B;</strong></a>
         </div>
     </body>
 </html>
